--- a/Optuna_Searches/More_Models_Full_Bayesian_Search + Outlier Search.ipynb
+++ b/Optuna_Searches/More_Models_Full_Bayesian_Search + Outlier Search.ipynb
@@ -734,20 +734,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[I 2024-04-13 13:30:03,262] A new study created in memory with name: no-name-561bd70f-0b39-4b94-a5fc-4c9329a7672a\n",
-      "[W 2024-04-13 13:30:19,683] Trial 4 failed with parameters: {'pagerank_cutoff': 1.2198982492378123, 'despike': True, 'baseline_correct': True, 'smoothing': False, 'scaling': True, 'despike_ma': 36, 'despike_threshold': 6.75, 'lam': 1000000, 'p': 0.067, 'scaling_type': 'normal', 'classifier': 'AdaBoost', 'ab_n_estimators': 131, 'ab_learning_rate': 0.9085685751853816} because of the following error: ValueError('Cannot have number of splits n_splits=10 greater than the number of groups: 9.').\n",
+      "[I 2024-04-13 13:35:54,358] A new study created in memory with name: no-name-410909ea-5fdb-4de2-ab96-0cbc3145d31e\n",
+      "[W 2024-04-13 13:35:57,593] Trial 10 failed with parameters: {'pagerank_cutoff': 1.3063862066087626, 'despike': True, 'baseline_correct': True, 'smoothing': True, 'scaling': True, 'despike_ma': 74, 'despike_threshold': 4.75, 'lam': 10000, 'p': 0.08600000000000001, 'window_size': 201, 'poly_order': 3, 'scaling_type': 'vector', 'classifier': 'AdaBoostExtraTrees', 'abet_et_n_estimators': 64, 'abet_et_max_depth': 8, 'abet_et_criterion': 'entropy', 'abet_n_estimators': 178, 'abet_learning_rate': 0.16402273972951745} because of the following error: ValueError('Cannot have number of splits n_splits=10 greater than the number of samples: n_samples=1.').\n",
       "Traceback (most recent call last):\n",
       "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\optuna\\study\\_optimize.py\", line 196, in _run_trial\n",
       "    value_or_values = func(trial)\n",
       "                      ^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\FX 8320\\AppData\\Local\\Temp\\ipykernel_28788\\2224130642.py\", line 98, in objective\n",
+      "  File \"C:\\Users\\FX 8320\\AppData\\Local\\Temp\\ipykernel_3420\\3957880251.py\", line 100, in objective\n",
       "    scores = cross_validate(classifier, X, y, groups=groups, cv=cv, scoring='accuracy')\n",
       "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
       "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\_param_validation.py\", line 213, in wrapper\n",
@@ -770,57 +770,10 @@
       "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 430, in <genexpr>\n",
       "    results = parallel(\n",
       "                      ^\n",
-      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_split.py\", line 377, in split\n",
-      "    for train, test in super().split(X, y, groups):\n",
-      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_split.py\", line 108, in split\n",
-      "    for test_index in self._iter_test_masks(X, y, groups):\n",
-      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_split.py\", line 120, in _iter_test_masks\n",
-      "    for test_index in self._iter_test_indices(X, y, groups):\n",
-      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_split.py\", line 570, in _iter_test_indices\n",
+      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_split.py\", line 370, in split\n",
       "    raise ValueError(\n",
-      "ValueError: Cannot have number of splits n_splits=10 greater than the number of groups: 9.\n",
-      "[W 2024-04-13 13:30:20,164] Trial 4 failed with value None.\n",
-      "[I 2024-04-13 13:30:50,881] Trial 7 finished with value: 0.4851146691886322 and parameters: {'pagerank_cutoff': 0.5388433228672743, 'despike': False, 'baseline_correct': False, 'smoothing': False, 'scaling': False, 'classifier': 'ExtraTrees', 'et_n_estimators': 51, 'et_max_depth': 9, 'et_criterion': 'entropy'}. Best is trial 7 with value: 0.4851146691886322.\n",
-      "[I 2024-04-13 13:30:53,818] Trial 8 finished with value: 0.08374624343664591 and parameters: {'pagerank_cutoff': 1.1572450150767843, 'despike': False, 'baseline_correct': True, 'smoothing': False, 'scaling': True, 'lam': 10000, 'p': 0.028, 'scaling_type': 'normal', 'classifier': 'ExtraTrees', 'et_n_estimators': 36, 'et_max_depth': 2, 'et_criterion': 'entropy'}. Best is trial 7 with value: 0.4851146691886322.\n",
-      "[I 2024-04-13 13:31:42,894] Trial 0 finished with value: 0.4797625229285515 and parameters: {'pagerank_cutoff': 0.9679557967507801, 'despike': True, 'baseline_correct': False, 'smoothing': False, 'scaling': False, 'despike_ma': 15, 'despike_threshold': 7.0, 'classifier': 'ExtraTrees', 'et_n_estimators': 60, 'et_max_depth': 14, 'et_criterion': 'log_loss'}. Best is trial 7 with value: 0.4851146691886322.\n",
-      "c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\ensemble\\_weight_boosting.py:519: FutureWarning: The SAMME.R algorithm (the default) is deprecated and will be removed in 1.6. Use the SAMME algorithm to circumvent this warning.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\ensemble\\_weight_boosting.py:519: FutureWarning: The SAMME.R algorithm (the default) is deprecated and will be removed in 1.6. Use the SAMME algorithm to circumvent this warning.\n",
-      "  warnings.warn(\n",
-      "[I 2024-04-13 13:32:45,228] Trial 10 finished with value: 0.36665079365079367 and parameters: {'pagerank_cutoff': 0.10319907688623192, 'despike': True, 'baseline_correct': True, 'smoothing': False, 'scaling': True, 'despike_ma': 58, 'despike_threshold': 8.0, 'lam': 1000, 'p': 0.055, 'scaling_type': 'normal', 'classifier': 'ExtraTrees', 'et_n_estimators': 50, 'et_max_depth': 4, 'et_criterion': 'gini'}. Best is trial 7 with value: 0.4851146691886322.\n",
-      "c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\ensemble\\_weight_boosting.py:519: FutureWarning: The SAMME.R algorithm (the default) is deprecated and will be removed in 1.6. Use the SAMME algorithm to circumvent this warning.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\ensemble\\_weight_boosting.py:519: FutureWarning: The SAMME.R algorithm (the default) is deprecated and will be removed in 1.6. Use the SAMME algorithm to circumvent this warning.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\ensemble\\_weight_boosting.py:519: FutureWarning: The SAMME.R algorithm (the default) is deprecated and will be removed in 1.6. Use the SAMME algorithm to circumvent this warning.\n",
-      "  warnings.warn(\n",
-      "[I 2024-04-13 13:32:58,329] Trial 11 finished with value: 0.37754413102820744 and parameters: {'pagerank_cutoff': 0.21349085069085785, 'despike': True, 'baseline_correct': False, 'smoothing': True, 'scaling': False, 'despike_ma': 52, 'despike_threshold': 5.0, 'window_size': 192, 'poly_order': 1, 'classifier': 'SVC', 'svc_c': 6.9600261573972775, 'svc_kernel': 'sigmoid', 'svc_gamma': 'scale'}. Best is trial 7 with value: 0.4851146691886322.\n",
-      "c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\ensemble\\_weight_boosting.py:519: FutureWarning: The SAMME.R algorithm (the default) is deprecated and will be removed in 1.6. Use the SAMME algorithm to circumvent this warning.\n",
-      "  warnings.warn(\n",
-      "[I 2024-04-13 13:33:01,509] Trial 2 finished with value: 0.5228616712630225 and parameters: {'pagerank_cutoff': 0.6789928470976182, 'despike': False, 'baseline_correct': False, 'smoothing': True, 'scaling': False, 'window_size': 109, 'poly_order': 5, 'classifier': 'RandomForest', 'rf_n_estimators': 47, 'rf_max_depth': 17, 'rf_criterion': 'log_loss'}. Best is trial 2 with value: 0.5228616712630225.\n",
-      "c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\ensemble\\_weight_boosting.py:519: FutureWarning: The SAMME.R algorithm (the default) is deprecated and will be removed in 1.6. Use the SAMME algorithm to circumvent this warning.\n",
-      "  warnings.warn(\n",
-      "[I 2024-04-13 13:33:03,366] Trial 3 finished with value: 0.49463492063492065 and parameters: {'pagerank_cutoff': 0.08101429373499096, 'despike': False, 'baseline_correct': True, 'smoothing': True, 'scaling': True, 'lam': 1000000000, 'p': 0.085, 'window_size': 458, 'poly_order': 1, 'scaling_type': 'vector', 'classifier': 'ExtraTrees', 'et_n_estimators': 53, 'et_max_depth': 28, 'et_criterion': 'gini'}. Best is trial 2 with value: 0.5228616712630225.\n",
-      "c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\ensemble\\_weight_boosting.py:519: FutureWarning: The SAMME.R algorithm (the default) is deprecated and will be removed in 1.6. Use the SAMME algorithm to circumvent this warning.\n",
-      "  warnings.warn(\n",
-      "[I 2024-04-13 13:33:06,372] Trial 5 finished with value: 0.5607250428997673 and parameters: {'pagerank_cutoff': 0.6678864243605572, 'despike': True, 'baseline_correct': False, 'smoothing': False, 'scaling': False, 'despike_ma': 49, 'despike_threshold': 9.75, 'classifier': 'SVC', 'svc_c': 5.3122180584156056e-08, 'svc_kernel': 'linear', 'svc_gamma': 'scale'}. Best is trial 5 with value: 0.5607250428997673.\n",
-      "c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\ensemble\\_weight_boosting.py:519: FutureWarning: The SAMME.R algorithm (the default) is deprecated and will be removed in 1.6. Use the SAMME algorithm to circumvent this warning.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\ensemble\\_weight_boosting.py:519: FutureWarning: The SAMME.R algorithm (the default) is deprecated and will be removed in 1.6. Use the SAMME algorithm to circumvent this warning.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\ensemble\\_weight_boosting.py:519: FutureWarning: The SAMME.R algorithm (the default) is deprecated and will be removed in 1.6. Use the SAMME algorithm to circumvent this warning.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\ensemble\\_weight_boosting.py:519: FutureWarning: The SAMME.R algorithm (the default) is deprecated and will be removed in 1.6. Use the SAMME algorithm to circumvent this warning.\n",
-      "  warnings.warn(\n",
-      "[I 2024-04-13 13:33:16,006] Trial 9 finished with value: 0.4276522740448299 and parameters: {'pagerank_cutoff': 0.4624817794279001, 'despike': True, 'baseline_correct': True, 'smoothing': True, 'scaling': True, 'despike_ma': 75, 'despike_threshold': 5.0, 'lam': 100, 'p': 0.026000000000000002, 'window_size': 144, 'poly_order': 3, 'scaling_type': 'normal', 'classifier': 'AdaBoostExtraTrees', 'abet_et_n_estimators': 82, 'abet_et_max_depth': 20, 'abet_et_criterion': 'gini', 'abet_n_estimators': 51, 'abet_learning_rate': 0.11590090827849665}. Best is trial 5 with value: 0.5607250428997673.\n",
-      "c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\ensemble\\_weight_boosting.py:519: FutureWarning: The SAMME.R algorithm (the default) is deprecated and will be removed in 1.6. Use the SAMME algorithm to circumvent this warning.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\ensemble\\_weight_boosting.py:519: FutureWarning: The SAMME.R algorithm (the default) is deprecated and will be removed in 1.6. Use the SAMME algorithm to circumvent this warning.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\ensemble\\_weight_boosting.py:519: FutureWarning: The SAMME.R algorithm (the default) is deprecated and will be removed in 1.6. Use the SAMME algorithm to circumvent this warning.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\ensemble\\_weight_boosting.py:519: FutureWarning: The SAMME.R algorithm (the default) is deprecated and will be removed in 1.6. Use the SAMME algorithm to circumvent this warning.\n",
-      "  warnings.warn(\n"
+      "ValueError: Cannot have number of splits n_splits=10 greater than the number of samples: n_samples=1.\n",
+      "[W 2024-04-13 13:35:58,104] Trial 10 failed with value None.\n"
      ]
     }
    ],
@@ -828,7 +781,7 @@
     "def objective(trial):\n",
     "\n",
     "    # Decide which cleaning steps to implement\n",
-    "    pagerank_cutoff = trial.suggest_float('pagerank_cutoff', 0, 1.32)\n",
+    "    pagerank_cutoff = trial.suggest_float('pagerank_cutoff', 0, 1.15)\n",
     "    despike = trial.suggest_categorical('despike', [True, False])\n",
     "    baseline_correct = trial.suggest_categorical('baseline_correct', [True, False])\n",
     "    smoothing = trial.suggest_categorical('smoothing', [True, False])\n",
@@ -900,7 +853,7 @@
     "\n",
     "    elif classifier_name == \"AdaBoost\":\n",
     "        classifier = AdaBoostClassifier(\n",
-    "            algorithm='SAMME'\n",
+    "            algorithm='SAMME',\n",
     "            n_estimators=trial.suggest_int(\"ab_n_estimators\", 50, 500),\n",
     "            learning_rate=trial.suggest_float(\"ab_learning_rate\", 0.01, 1.0, log=True),\n",
     "            random_state=1234,\n",
@@ -914,7 +867,7 @@
     "            random_state=1234,\n",
     "        )\n",
     "        classifier = AdaBoostClassifier(\n",
-    "            algorithm='SAMME'\n",
+    "            algorithm='SAMME',\n",
     "            estimator=base_et,\n",
     "            n_estimators=trial.suggest_int(\"abet_n_estimators\", 30, 300),\n",
     "            learning_rate=trial.suggest_float(\"abet_learning_rate\", 0.01, 1.0, log=True),\n",
