--- a/Optuna_Searches/More_Models_Full_Bayesian_Search + Outlier Search.ipynb
+++ b/Optuna_Searches/More_Models_Full_Bayesian_Search + Outlier Search.ipynb
@@ -773,7 +773,8 @@
       "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_split.py\", line 370, in split\n",
       "    raise ValueError(\n",
       "ValueError: Cannot have number of splits n_splits=10 greater than the number of samples: n_samples=1.\n",
-      "[W 2024-04-13 13:35:58,104] Trial 10 failed with value None.\n"
+      "[W 2024-04-13 13:35:58,104] Trial 10 failed with value None.\n",
+      "[I 2024-04-13 13:36:26,562] Trial 9 finished with value: 0.22263712165027955 and parameters: {'pagerank_cutoff': 1.163949411008419, 'despike': True, 'baseline_correct': True, 'smoothing': False, 'scaling': True, 'despike_ma': 25, 'despike_threshold': 8.0, 'lam': 100000000, 'p': 0.033, 'scaling_type': 'vector', 'classifier': 'RandomForest', 'rf_n_estimators': 34, 'rf_max_depth': 5, 'rf_criterion': 'gini'}. Best is trial 9 with value: 0.22263712165027955.\n"
      ]
     }
    ],
@@ -973,6 +974,27 @@
     "study.optimize(objective, n_trials=500, n_jobs=-1)\n",
     "\n",
     "print(study.best_trial)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_df = study.trials_dataframe(attrs=(\"number\", \"value\", \"params\", \"state\"))\n",
+    "results_df.to_csv(\"../../data/studies/more_models_outliers_removed.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "joblib.dump(study, \"../../data/studies/more_models_outliers_removed.pkl\")"
    ]
   }
  ],
