Added manual cleaning

--- a/Optuna_Searches/More_Models_Full_Bayesian_Search + Outlier Search.ipynb
+++ b/Optuna_Searches/More_Models_Full_Bayesian_Search + Outlier Search.ipynb
@@ -734,47 +734,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[I 2024-04-13 13:35:54,358] A new study created in memory with name: no-name-410909ea-5fdb-4de2-ab96-0cbc3145d31e\n",
-      "[W 2024-04-13 13:35:57,593] Trial 10 failed with parameters: {'pagerank_cutoff': 1.3063862066087626, 'despike': True, 'baseline_correct': True, 'smoothing': True, 'scaling': True, 'despike_ma': 74, 'despike_threshold': 4.75, 'lam': 10000, 'p': 0.08600000000000001, 'window_size': 201, 'poly_order': 3, 'scaling_type': 'vector', 'classifier': 'AdaBoostExtraTrees', 'abet_et_n_estimators': 64, 'abet_et_max_depth': 8, 'abet_et_criterion': 'entropy', 'abet_n_estimators': 178, 'abet_learning_rate': 0.16402273972951745} because of the following error: ValueError('Cannot have number of splits n_splits=10 greater than the number of samples: n_samples=1.').\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\optuna\\study\\_optimize.py\", line 196, in _run_trial\n",
-      "    value_or_values = func(trial)\n",
-      "                      ^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\FX 8320\\AppData\\Local\\Temp\\ipykernel_3420\\3957880251.py\", line 100, in objective\n",
-      "    scores = cross_validate(classifier, X, y, groups=groups, cv=cv, scoring='accuracy')\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\_param_validation.py\", line 213, in wrapper\n",
-      "    return func(*args, **kwargs)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 430, in cross_validate\n",
-      "    results = parallel(\n",
-      "              ^^^^^^^^^\n",
-      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\parallel.py\", line 67, in __call__\n",
-      "    return super().__call__(iterable_with_config)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\parallel.py\", line 1863, in __call__\n",
-      "    return output if self.return_generator else list(output)\n",
-      "                                                ^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\parallel.py\", line 1789, in _get_sequential_output\n",
-      "    for func, args, kwargs in iterable:\n",
-      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\parallel.py\", line 63, in <genexpr>\n",
-      "    iterable_with_config = (\n",
-      "                           ^\n",
-      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 430, in <genexpr>\n",
-      "    results = parallel(\n",
-      "                      ^\n",
-      "  File \"c:\\Users\\FX 8320\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_split.py\", line 370, in split\n",
-      "    raise ValueError(\n",
-      "ValueError: Cannot have number of splits n_splits=10 greater than the number of samples: n_samples=1.\n",
-      "[W 2024-04-13 13:35:58,104] Trial 10 failed with value None.\n",
-      "[I 2024-04-13 13:36:26,562] Trial 9 finished with value: 0.22263712165027955 and parameters: {'pagerank_cutoff': 1.163949411008419, 'despike': True, 'baseline_correct': True, 'smoothing': False, 'scaling': True, 'despike_ma': 25, 'despike_threshold': 8.0, 'lam': 100000000, 'p': 0.033, 'scaling_type': 'vector', 'classifier': 'RandomForest', 'rf_n_estimators': 34, 'rf_max_depth': 5, 'rf_criterion': 'gini'}. Best is trial 9 with value: 0.22263712165027955.\n"
+      "[I 2024-04-13 13:37:20,471] A new study created in memory with name: no-name-10e926a5-bb00-4e4f-86a3-2df8988e9209\n",
+      "[I 2024-04-13 13:37:33,970] Trial 8 finished with value: 0.17132505175983437 and parameters: {'pagerank_cutoff': 1.1328673661686044, 'despike': True, 'baseline_correct': False, 'smoothing': False, 'scaling': True, 'despike_ma': 95, 'despike_threshold': 9.0, 'scaling_type': 'normal', 'classifier': 'SVC', 'svc_c': 0.007291633716397829, 'svc_kernel': 'sigmoid', 'svc_gamma': 'auto'}. Best is trial 8 with value: 0.17132505175983437.\n"
      ]
     }
    ],
