--- a/feature_engineering/quick_spectra_cleaning.ipynb
+++ b/feature_engineering/quick_spectra_cleaning.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "[6239205 rows x 6 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Absorbance'>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Absorbance'>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Absorbance'>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Despiked_Absorbance'>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Baseline_Corrected_Absorbance'>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Smoothed_Absorbance'>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,19 +603,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Optional Scaling\n",
     "# df['Smooth_Baseline_Corrected'] = df.groupby('SpecID')['Smooth_Baseline_Corrected'].transform(lambda x: normalise(x))\n",
     "# df['Smooth_Baseline_Corrected'] = df.groupby('SpecID')['Smooth_Baseline_Corrected'].transform(lambda x: vector_normalise(x))\n",
-    "df['Smooth_Baseline_Corrected'] = df.groupby('SpecID')['Smooth_Baseline_Corrected'].transform(lambda x: svn_normalise(x))"
+    "# df['Smooth_Baseline_Corrected'] = df.groupby('SpecID')['Smooth_Baseline_Corrected'].transform(lambda x: svn_normalise(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
        "      <td>Normal</td>\n",
        "      <td>1729.979778</td>\n",
        "      <td>35.683022</td>\n",
-       "      <td>-0.019205</td>\n",
+       "      <td>40.703772</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>294</th>\n",
@@ -673,7 +673,7 @@
        "      <td>Normal</td>\n",
        "      <td>1729.824757</td>\n",
        "      <td>44.956143</td>\n",
-       "      <td>-0.111056</td>\n",
+       "      <td>37.426108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>295</th>\n",
@@ -685,7 +685,7 @@
        "      <td>Normal</td>\n",
        "      <td>1729.669737</td>\n",
        "      <td>39.360463</td>\n",
-       "      <td>-0.182767</td>\n",
+       "      <td>34.867161</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>296</th>\n",
@@ -697,7 +697,7 @@
        "      <td>Normal</td>\n",
        "      <td>1729.514717</td>\n",
        "      <td>26.907283</td>\n",
-       "      <td>-0.236198</td>\n",
+       "      <td>32.960484</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>297</th>\n",
@@ -709,7 +709,7 @@
        "      <td>Normal</td>\n",
        "      <td>1729.359696</td>\n",
        "      <td>29.509304</td>\n",
-       "      <td>-0.273213</td>\n",
+       "      <td>31.639630</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -733,7 +733,7 @@
        "      <td>Hyperglycemia</td>\n",
        "      <td>1646.444840</td>\n",
        "      <td>-29.052240</td>\n",
-       "      <td>-1.510989</td>\n",
+       "      <td>-14.516414</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8023278</th>\n",
@@ -745,7 +745,7 @@
        "      <td>Hyperglycemia</td>\n",
        "      <td>1645.658439</td>\n",
        "      <td>-12.567339</td>\n",
-       "      <td>-1.520719</td>\n",
+       "      <td>-14.950487</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8023279</th>\n",
@@ -757,7 +757,7 @@
        "      <td>Hyperglycemia</td>\n",
        "      <td>1644.872038</td>\n",
        "      <td>-11.564438</td>\n",
-       "      <td>-1.539756</td>\n",
+       "      <td>-15.799709</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8023280</th>\n",
@@ -769,7 +769,7 @@
        "      <td>Hyperglycemia</td>\n",
        "      <td>1644.085636</td>\n",
        "      <td>-2.219136</td>\n",
-       "      <td>-1.569132</td>\n",
+       "      <td>-17.110115</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8023281</th>\n",
@@ -781,7 +781,7 @@
        "      <td>Hyperglycemia</td>\n",
        "      <td>1643.299235</td>\n",
        "      <td>-25.058735</td>\n",
-       "      <td>-1.609878</td>\n",
+       "      <td>-18.927739</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -803,22 +803,22 @@
        "8023281  210526-3-09  2341  1799.77220   1618.2405  210526-3  Hyperglycemia   \n",
        "\n",
        "            Baseline  Baseline_Corrected_Absorbance  Smooth_Baseline_Corrected  \n",
-       "293      1729.979778                      35.683022                  -0.019205  \n",
-       "294      1729.824757                      44.956143                  -0.111056  \n",
-       "295      1729.669737                      39.360463                  -0.182767  \n",
-       "296      1729.514717                      26.907283                  -0.236198  \n",
-       "297      1729.359696                      29.509304                  -0.273213  \n",
+       "293      1729.979778                      35.683022                  40.703772  \n",
+       "294      1729.824757                      44.956143                  37.426108  \n",
+       "295      1729.669737                      39.360463                  34.867161  \n",
+       "296      1729.514717                      26.907283                  32.960484  \n",
+       "297      1729.359696                      29.509304                  31.639630  \n",
        "...              ...                            ...                        ...  \n",
-       "8023277  1646.444840                     -29.052240                  -1.510989  \n",
-       "8023278  1645.658439                     -12.567339                  -1.520719  \n",
-       "8023279  1644.872038                     -11.564438                  -1.539756  \n",
-       "8023280  1644.085636                      -2.219136                  -1.569132  \n",
-       "8023281  1643.299235                     -25.058735                  -1.609878  \n",
+       "8023277  1646.444840                     -29.052240                 -14.516414  \n",
+       "8023278  1645.658439                     -12.567339                 -14.950487  \n",
+       "8023279  1644.872038                     -11.564438                 -15.799709  \n",
+       "8023280  1644.085636                      -2.219136                 -17.110115  \n",
+       "8023281  1643.299235                     -25.058735                 -18.927739  \n",
        "\n",
        "[6239205 rows x 9 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
        "      <td>400.22778</td>\n",
        "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>-0.019205</td>\n",
+       "      <td>40.703772</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>294</th>\n",
@@ -888,7 +888,7 @@
        "      <td>400.91116</td>\n",
        "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>-0.111056</td>\n",
+       "      <td>37.426108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>295</th>\n",
@@ -897,7 +897,7 @@
        "      <td>401.59454</td>\n",
        "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>-0.182767</td>\n",
+       "      <td>34.867161</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>296</th>\n",
@@ -906,7 +906,7 @@
        "      <td>402.27789</td>\n",
        "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>-0.236198</td>\n",
+       "      <td>32.960484</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>297</th>\n",
@@ -915,7 +915,7 @@
        "      <td>402.96127</td>\n",
        "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>-0.273213</td>\n",
+       "      <td>31.639630</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -933,7 +933,7 @@
        "      <td>1797.03870</td>\n",
        "      <td>210526-3</td>\n",
        "      <td>Hyperglycemia</td>\n",
-       "      <td>-1.510989</td>\n",
+       "      <td>-14.516414</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8023278</th>\n",
@@ -942,7 +942,7 @@
        "      <td>1797.72200</td>\n",
        "      <td>210526-3</td>\n",
        "      <td>Hyperglycemia</td>\n",
-       "      <td>-1.520719</td>\n",
+       "      <td>-14.950487</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8023279</th>\n",
@@ -951,7 +951,7 @@
        "      <td>1798.40550</td>\n",
        "      <td>210526-3</td>\n",
        "      <td>Hyperglycemia</td>\n",
-       "      <td>-1.539756</td>\n",
+       "      <td>-15.799709</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8023280</th>\n",
@@ -960,7 +960,7 @@
        "      <td>1799.08890</td>\n",
        "      <td>210526-3</td>\n",
        "      <td>Hyperglycemia</td>\n",
-       "      <td>-1.569132</td>\n",
+       "      <td>-17.110115</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8023281</th>\n",
@@ -969,7 +969,7 @@
        "      <td>1799.77220</td>\n",
        "      <td>210526-3</td>\n",
        "      <td>Hyperglycemia</td>\n",
-       "      <td>-1.609878</td>\n",
+       "      <td>-18.927739</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -978,22 +978,22 @@
       ],
       "text/plain": [
        "              SpecID   Seq  WaveNumber     SurID         Status  Absorbance\n",
-       "293      201210-1-00   293   400.22778  201210-1         Normal   -0.019205\n",
-       "294      201210-1-00   294   400.91116  201210-1         Normal   -0.111056\n",
-       "295      201210-1-00   295   401.59454  201210-1         Normal   -0.182767\n",
-       "296      201210-1-00   296   402.27789  201210-1         Normal   -0.236198\n",
-       "297      201210-1-00   297   402.96127  201210-1         Normal   -0.273213\n",
+       "293      201210-1-00   293   400.22778  201210-1         Normal   40.703772\n",
+       "294      201210-1-00   294   400.91116  201210-1         Normal   37.426108\n",
+       "295      201210-1-00   295   401.59454  201210-1         Normal   34.867161\n",
+       "296      201210-1-00   296   402.27789  201210-1         Normal   32.960484\n",
+       "297      201210-1-00   297   402.96127  201210-1         Normal   31.639630\n",
        "...              ...   ...         ...       ...            ...         ...\n",
-       "8023277  210526-3-09  2337  1797.03870  210526-3  Hyperglycemia   -1.510989\n",
-       "8023278  210526-3-09  2338  1797.72200  210526-3  Hyperglycemia   -1.520719\n",
-       "8023279  210526-3-09  2339  1798.40550  210526-3  Hyperglycemia   -1.539756\n",
-       "8023280  210526-3-09  2340  1799.08890  210526-3  Hyperglycemia   -1.569132\n",
-       "8023281  210526-3-09  2341  1799.77220  210526-3  Hyperglycemia   -1.609878\n",
+       "8023277  210526-3-09  2337  1797.03870  210526-3  Hyperglycemia  -14.516414\n",
+       "8023278  210526-3-09  2338  1797.72200  210526-3  Hyperglycemia  -14.950487\n",
+       "8023279  210526-3-09  2339  1798.40550  210526-3  Hyperglycemia  -15.799709\n",
+       "8023280  210526-3-09  2340  1799.08890  210526-3  Hyperglycemia  -17.110115\n",
+       "8023281  210526-3-09  2341  1799.77220  210526-3  Hyperglycemia  -18.927739\n",
        "\n",
        "[6239205 rows x 6 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
